--- a/text/supercomputingcenters.tex
+++ b/text/supercomputingcenters.tex
@@ -17,7 +17,7 @@ general data center).
 \subsection{Electricity Demand and Supply Side Management}
 
 Electricity providers use demand-side management for both energy efficiency and to balance the electricity supply. 
-Demand side management programs are used to manage the consumption of energy on the consumer’s side of the meter.  
+Demand side management programs are used to manage the electricity consumption on the consumer’s side of the meter.  
 Demand side management can include energy conservation, energy efficiency and peak load management, and responses to 
 changing supply conditions.  The focus for this paper is on programs that are targeted at load management. 
 Supply side management methods are used to ensure the efficient generation, transmission and distribution of 
