--- a/text/questionaire.tex
+++ b/text/questionaire.tex
@@ -12,9 +12,9 @@ Lawrence Livermore National Laboratory,
 Argonne National Laboratory, 
 Los Alamos National Laboratory, LBNL, 
 Wright Patterson Air Force Base,
-National Oceanic Atmospheric Administration, 
+National Oceanic Atmospheric Administration (NOAA), 
 National Center for Supercomputing Applications, 
-San Diego Supercomputing Center, 
+San Diego Supercomputing Center (SDSC), 
 Purdue University and Intel Corporation). Eight sites didn't respond (
 National Center for Atmospheric Research,
 IBM Corporation, 
@@ -149,7 +149,7 @@ Contributing to electrical grid storage&
 More than half of the respondents are not interested in shedding or shifting
 load during peak demand. There is some indication that this low interest is
 primarily due to the lack of a clear business case. For the sites where
-there is interest, shifting is more attractive than shedding load. The San Diego Supercomputing Center (SDSC) is
+there is interest, shifting is more attractive than shedding load. SDSC is
 an exception to this trend because of a site-wide program. ``University of California San Diego
 generates 30-35MW of power yet still imports 5-10MW. As a large generation
 source the utility providers see the campus as a highly attractive partner
@@ -203,10 +203,18 @@ relevant and effective for grid integration at some point in the future. Two
 questions were asked; is there interest in using the strategies and what
 impact did they think that the strategies would have. When combining
 interest and impact, the results showed that power capping, shutdown, and
-job scheduling were both high interest and impact. Load migration, back-up
+job scheduling were both potentially interesting and of high impact. Load migration, back-up
 scheduling, fine grained power management and thermal management were medium
 interest and impact. Lighting control and back-up resources were low
-interest and impact.
+interest and impact.  
+
+Distinguishing interest from impact sheds further insight; some strategies are 
+considered high impact, but not interesting to consider deployment.  Facility
+shutdown is rated as having a high impact, but only
+considered interesting by 36 percent of the respondents.  NOAA commented that, 
+"We've had too many instability and equipment failures to utilize this as a strategy."  This divide is even more
+apparent with load migration.  It is rated as having a high impact by 36 percent of the
+respondents, but only interesting to 10 percent.  
 
 
 \begin{table}[htbp]
