Addressed Sridutt's comments
split interest from impact
clarified 'some indication' for peak shed/peak shift

--- a/text/questionaire.tex
+++ b/text/questionaire.tex
@@ -147,8 +147,8 @@ Contributing to electrical grid storage&
 \end{table}
 
 More than half of the respondents are not interested in shedding or shifting
-load during peak demand. There is some indication that this low interest is
-primarily due to the lack of a clear business case. For the sites where
+load during peak demand. LANL reports that the "technical feasibility" and "business case has yet to be developed."
+For the sites where
 there is interest, shifting is more attractive than shedding load. SDSC is
 an exception to this trend because of a site-wide program. ``University of California San Diego
 generates 30-35MW of power yet still imports 5-10MW. As a large generation
