--- a/text/questionaire.tex
+++ b/text/questionaire.tex
@@ -218,32 +218,102 @@ respondents, but only interesting to 10 percent.
 
 
 \begin{table}[htbp]
-
 \begin{center}
-\caption{Caption Number 3}
-\begin{tabular}{|p{299pt}|}
+\caption{Summary of aspects and quality levels}
+\begin{tabular}{|p{2.5in}|p{0.75in}|p{0.75in}|p{0.75in}|} \hline
+
+\textbf{HPC strategies for responding to} &
+\textbf{\%} &
+\textbf{\%} &
+\textbf{\%} \\
+
+\textbf{Electricity Provider requests} &
+\textbf{Interested} &
+\textbf{High} &
+\textbf{Medium} \\
+
+\textbf{(listed from highest to lowest interest + impact)} &
+ &
+\textbf{Impact} & 
+\textbf{Impact} \\
 \hline
-\textbf{HPC strategies for responding to Electricity Provider requests (listed from highest to lowest interest }$+$\textbf{ impact)} \\
+
+Course grained power management &
+64 &
+46 &
+27 \\
+
+Load migration &
+10 &
+36 &
+18 \\
 \hline
-Coarse grained power management \\
+
+Re-scheduling back-ups &
+45 &
+0 &
+10 \\
 \hline
-Facility shutdown \\
+
+Fine grained power management &
+27 &
+0 &
+36 \\
 \hline
-Job scheduling \\
+
+Temperature control beyond ASHRAE limits &
+27 &
+0 &
+18 \\
 \hline
-Load migration \\
+
+Turn off lighting &
+18 &
+0 &
+0 \\
 \hline
-Re-scheduling back-ups \\
+
+Use back-up resources (e.g., generators) &
+0 &
+10 &
+27 \\
 \hline
-Fine grained power management \\
-\hline
-Temperature control beyond ASHRAE limits \\
-\hline
-Turn off lighting \\
-\hline
-Use back-up resources (e.g., generators) \\
-\hline
+
 \end{tabular}
 \label{tab3}
 \end{center}
+
 \end{table}
+
+
+%\begin{table}[htbp]
+%
+%\begin{center}
+%\caption{Caption Number 3}
+%\begin{tabular}{|p{299pt}|}
+%\hline
+%\textbf{HPC strategies for responding to Electricity Provider requests (listed from highest to lowest interest }$+$\textbf{ impact)} \\
+%\hline
+%Coarse grained power management \\
+%\hline
+%Facility shutdown \\
+%\hline
+%Job scheduling \\
+%\hline
+%Load migration \\
+%\hline
+%Re-scheduling back-ups \\
+%\hline
+%Fine grained power management \\
+%\hline
+%Temperature control beyond ASHRAE limits \\
+%\hline
+%Turn off lighting \\
+%\hline
+%Use back-up resources (e.g., generators) \\
+%\hline
+%\end{tabular}
+%\label{tab3}
+%\end{center}
+
+%\end{table}
