Fix a syntax error in my LaTeX markup.

--- a/text/opportunities.tex
+++ b/text/opportunities.tex
@@ -46,8 +46,8 @@ Perhaps one of the most straightforward ways that supercomputing
 centers can begin the process of developing a demand-response
 capability is by enhancing existing system software used for managing
 computing resources within the center.  Indeed, the questionaire
-responses from Section~\{sec:questionaire} as well as the literature
-review presented in Section~\{sec:priorwork} both strongly support the
+responses from Section~\ref{sec:questionaire} as well as the literature
+review presented in Section~\ref{sec:priorwork} both strongly support the
 idea that the greatest opportunities for supercomputing centers to
 develop integration capabilities are related to system software.
 Specifically, and presented in approximate order of decreasing
