--- a/text/opportunities.tex
+++ b/text/opportunities.tex
@@ -144,6 +144,11 @@ day-to-day operation of the center and to demand-response capabilities.
 
 % It may be possible to self-cite some of my upcoming publications
 % that discuss how to do power capping in a scheduler.
+
+% Comment from Ghaleb:
+% We can argue the need for instrumentation not necessarily assume that they will exist. 
+% Since this paper is encouraging SC centers to consider D/R then I think it makes sense to 
+% encourage work in having better and finer resolution instrumentation capabilities.
 Several of the ideas described in the preceeding paragraphs assume
 that the supercomputing center environment has some amount of
 instrumentation and metering that allows for the collection of power
